# gb-forecast

./: .gitignore  LOG.md  main.py  pyproject.toml
docs/: DATA_SOURCES.md  DECISIONS.md  endpoints.csv
scripts/: plot_demand_shape.py  plot_embedded_solar.py  probe_demand.py  probe_fuelinst.py  probe_itsdo.py  probe_wind_solar.py  recon_endpoints.py
